fixed: menu bar position on mobile

--- a/src/components/MenuBar/MenuBar.scss
+++ b/src/components/MenuBar/MenuBar.scss
@@ -3,7 +3,7 @@
 nav {
   position: fixed;
   background: rgba(#000000, 0.7);
-  top: calc(100vh - 65px);
+  top: calc(100% - 65px);
   bottom: 0;
   left: 0;
   right: 0;
